<resources>
    <string name="app_name">Производство</string>

    // Названия вкладок
    <string name="processing">К обработке</string>
    <string name="processed">Обработанные</string>

    // Подзаголовки экранов
    <string name="market_number">ТК-%1$s</string>
    <string name="work_with_pu_es_quantity">Работа с %1$s (%2$d)</string>
    <string name="good_list">Список товаров</string>
    <string name="pu_number">ЕО %1$s</string>
    <string name="good_card">Карточка товара</string>
    <string name="good_select">Выбор товара</string>
    <string name="defect_detail">Детализация брака</string>
    <string name="pack_list">Список тар</string>

    // Информационные сообщения
    <string name="defrosting_phase_is_completed">Этап дефростирования завершен</string>
    <string name="confirm_that_there_is_no_such_item_left">Подтвердите, что в %1$s не осталось данного товара</string>
    <string name="confirm_no_raw_items">Подтвердите отсутствие необработанных товаров в %1$s</string>
    <string name="fixing_beginning_of_packaging_phase_was_successful">Этап дефростирования завершен.\nФиксация начала этапа упаковки прошла успешно.</string>
    <string name="not_saved_data_will_be_lost">Несохраненные данные будут утеряны, все равно продолжить?</string>
    <string name="more_than_one_order_for_this_product">По данному товару активно более одного заказа на упаковку</string>
    <string name="more_than_one_good_for_this_task">По данной задаче активно более одного товара на упаковку</string>
    <string name="error_completing_object_processing">Ошибка завершения обработки объекта</string>
    <string name="label_sent_to_print">Этикетка отправлена на печать</string>
    <string name="process_order_not_found">Не найден технологический заказ</string>
    <string name="fix_start_next_stage_successful">Фиксация начала следующего этапа прошла успешно</string>

    // Заголовки списков
    <string name="sku">SKU</string>
    <string name="sign">Признаки</string>
    <string name="pu">ЕО</string>
    <string name="es">ВП</string>
    <string name="remain">Остаток</string>
    <string name="arrived">Прибыло</string>
    <string name="sf_type">Вид ПФ</string>
    <string name="sf">ПФ</string>
    <string name="total_processed">Обработано</string>
    <string name="pack_number">Номер тары</string>
    <string name="pack_type_cause">Тара/Тип/Причина</string>
    <string name="total_weight">Общий вес</string>
    <string name="plan_quantity">Плановое кол-во</string>
    <string name="short_quantity">Кол-во</string>
    <string name="pack_print">Тара/Печать</string>

    // Разные строки
    <string name="processing_pu">Обработка ЕО</string>
    <string name="processing_es">Обработка ВП</string>
    <string name="enter_number_es">Введите номер ВП</string>
    <string name="enter_number_pu">Введите номер ЕО</string>
    <string name="scan_barcode">Отсканируйте штрихкод</string>
    <string name="fact">Факт</string>
    <string name="total">Итого</string>
    <string name="planed_quantity">План на передел</string>
    <string name="next_raw">Следующий передел</string>
    <string name="no_ip_printer_alert">IP адрес принтера не указан</string>
    <string name="reprint_labels">Повторная печать этикеток</string>
    <string name="defect">Брак</string>
    <string name="total_sf">Итого ПФ</string>
    <string name="total_defect">Итого брак</string>
    <string name="defect_mark">***БРАК***</string>

    <string name="movement_btw_warehouses">Перемещение между складами</string>
    <string name="count">Количество</string>
    <string name="storage_sender">Склад отправитель</string>
    <string name="storage_receiver">Склад получатель</string>
    <string name="container">Тара</string>
    <string name="tw_search_info">Отсканируйте ШК или введите товар вручную</string>
    <string name="preparation_ingredients">Подготовка ингредиентов</string>
    <string name="tw_alert_part_not_found">Отсканированная партия не найдена в системе. Отложите товар и проведите инвентаризацию.</string>
    <string name="tw_alert_good_not_found">Данный товар не найден</string>
    <string name="tw_alert_ingredient_not_found">Ингредиент не найден</string>
    <string name="tw_alert_ingredient_not_found_in_position">Ингредиент не найден в данной позиции</string>
    <string name="tw_alert_dualism">Отсканированный товар может быть обработан как в рамках заказа, так и в рамках передела. Выберите режим обработки вручную</string>
    <string name="tw_alert_good_not_found_in_current_shift">Отсканированный товар не найден в ингредиентах на текущую смену</string>
    <string name="tw_moving_successful">Перемещение товара выполнено</string>
    <string name="tw_exceeded_limit">Превышено количество по партии</string>
    <string name="tw_wrong_date">Некорректная дата</string>
    <string name="tw_wrong_time">Некорректное время</string>
    <string name="tw_shelflife_expired">Срок годности товара истек. \n Отложите товар и проведите инвентаризацию</string>
    <string name="tw_producer_code_not_found">По товару получены партии с указанным и отсутствующим \n кодом производителя одновременно.
        Проверьте данные</string>
    <string name="tw_order_ingredient_error">Невозможно добавить партионные признаки</string>
    <string name="title_good_sap_name">%1$s %2$s</string>


    <!-- Типы складов -->
    <string name="warehouse_select">Выберите склад:</string>
    <string name="warehouse_1">0111</string>
    <string name="warehouse_2">0121</string>
    <string name="warehouse_3">0131</string>
    <string name="warehouse_4">0141</string>
    <string name="warehouse_all">Выбрать все</string>
    <string name="desc_ingredients_list">Список объектов</string>
    <string name="desc_order_ingredients_list_by">Список ингредиентов на %s кг</string>
    <string name="desc_tech_order_list_by">Список технологических заказов</string>
    <string name="desc_ingredient_detail">Детализация заказа</string>
    <string name="desc_remakes_list">Список переделов</string>
    <string name="column_name_two">Заказ/Склад/ПФ</string>
    <string name="column_name_good">Товар</string>
    <string name="column_name_order_tech">Заказ/ПФ</string>
    <string name="column_name_remake">Склад/Передел</string>
    <string name="column_name_plan">План</string>
    <string name="column_name_plan_value">План сырья</string>
    <string name="column_name_fact">Факт</string>
    <string name="column_name_amount">Итого</string>
    <string name="tab_name_by_order">По Заказу</string>
    <string name="tab_name_by_material">По Материалу</string>
    <string name="text_complect">Комплектация</string>
    <string name="text_weight_hint">кг</string>
    <string name="text_pf">ПФ</string>
    <string name="text_pf_plan">ПФ План</string>
    <string name="text_already">Скомплектовано</string>
    <string name="text_add_attribute">Укажите партионные признаки \n с этикетки</string>
    <string name="text_production_date">Дата производства</string>
    <string name="text_production_time">Время производства</string>
    <string name="text_warehouse">Склад</string>
    <string name="error_weight_not_set">Вы не указали значение: количество</string>

</resources>
