<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.good_weighing.GoodWeighingFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp16.features.good_packaging.GoodPackagingViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Текущее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/fact" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout style="@style/LinearCellStyle">

                <com.lenta.shared.view.EditTextWithSuffix
                    style="@style/CellEditTextStyle"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@={vm.weightField}"
                    app:digitsForUom="@{vm.good.units}"
                    app:maxLengthForScanProtect="@{6}"
                    app:suffix="@{vm.good.units.name}"
                    tools:text="0 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/total_sf" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.enteredWithUnits}"
                    tools:text="12 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество брака -->
        <LinearLayout
            style="@style/LinearRowStyle"
            app:isGone="@{!vm.defectVisibility}">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/total_defect" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.defectWithUnits}"
                    tools:text="7 кг" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"
            app:isGone="@{!vm.defectVisibility}" />

        <!-- Плановое количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/planed_quantity" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.planned}"
                    tools:text="25 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Продукт для обработки -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/next_raw" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:maxLines="2"
                    android:text="@{vm.raw.name}"
                    tools:text="Форель филе" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

    </LinearLayout>

</layout>