<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_16dp"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/size_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Приемов Тест Тестович" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_96dp"
            android:layout_marginEnd="@dimen/size_8dp"
            android:src="@drawable/logo_lenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:layout_marginBottom="@dimen/size_16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movement_btw_warehouses"
                app:icon="@drawable/ic_between_warehouses_32dp"
                app:iconGravity="end" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparation_ingredients"
                app:icon="@drawable/ic_ingridient_32dp"
                app:iconGravity="end" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/processing_es"
                app:icon="@drawable/ic_document_page_white_32dp"
                app:iconGravity="end" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/processing_pu"
                app:icon="@drawable/ic_processing_unit_32dp"
                app:iconGravity="end" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>