<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.lenta.bp14.features.work_list.goods_list.GoodsListWlFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp16.features.external_supply_task_list.ExternalSupplyTaskListViewModel" />

        <variable
            name="rvConfig"
            type="com.lenta.shared.utilities.databinding.DataBindingRecyclerViewConfig" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Наименования колонок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/FirstRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/four_one_1">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/number" />

                </LinearLayout>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/four_one_2">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/es" />

                </LinearLayout>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/four_one_3">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/sign" />

                </LinearLayout>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/four_one_4">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/sku" />

                </LinearLayout>

            </LinearLayout>

            <View style="@style/HorizontalDivider" />

        </LinearLayout>

        <!-- Список товаров -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:items="@{vm.processing}"
            app:rv_config="@{rvConfig}"
            tools:listitem="@layout/item_es_task" />

        <!-- Ввод номера ЕО -->
        <LinearLayout style="@style/EnterNumberFieldLayout">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:drawableEnd="@drawable/ic_filter_white_16dp"
                android:ellipsize="end"
                android:hint="@string/enter_number_es"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:text="@={vm.numberField}"
                app:onOkInSoftKeyboard="@{vm}"
                app:requestFocus="@{vm.requestFocusToNumberField}"
                tools:ignore="Autofill" />

        </LinearLayout>

    </LinearLayout>

</layout>