<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.order_details.OrderDetailsFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp16.features.order_details.OrderDetailsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Текущее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_complect" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <com.lenta.shared.view.EditTextWithSuffix
                    style="@style/CellEditTextStyle"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@={vm.weightField}"
                    app:suffix="@{vm.suffix}"
                    app:cursorToLastPos="@{false}"
                    app:requestFocus="@{vm.requestFocusToCount}"
                    tools:text="0 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_pf" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:singleLine="false"
                    android:maxLines="2"
                    app:zoom="@{true}"
                    android:text="@{vm.ingredient.nameMatnrOsn}"
                    tools:text="Шашлык" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество брака -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_pf_plan" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.ingredient.planQntStr}"
                    tools:text="70 кг" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>

        <!-- Плановое количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_already" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.ingredient.doneQnt}"
                    tools:text="25 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Продукт для обработки -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_warehouse" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:maxLines="2"
                    android:text="@{vm.ingredient.lgort}"
                    tools:text="0111" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

    </LinearLayout>

</layout>