<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.good_weighing.GoodWeighingFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp16.features.ingredient_details.IngredientDetailsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Текущее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/column_name_fact" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <com.lenta.shared.view.EditTextWithSuffix
                    style="@style/CellEditTextStyle"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@={vm.weightField}"
                    app:suffix="@{vm.suffix}"
                    tools:text="0 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/column_name_amount" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:singleLine="false"
                    android:maxLines="2"
                    android:text="@{vm.totalWithUnits}"
                    tools:text="10 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Общее количество брака -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/column_name_plan" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.orderIngredient.name}"
                    tools:text="70 кг" />

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>

        <!-- Плановое количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/text_already" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@{vm.orderIngredient.name}"
                    tools:text="25 кг" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

    </LinearLayout>

</layout>